--- a/app/src/main/res/layout/activity_text_view_showcase.xml
+++ b/app/src/main/res/layout/activity_text_view_showcase.xml
@@ -6,4 +6,54 @@
     android:layout_height="match_parent"
     tools:context=".TextViewShowcase">
 
+    <LinearLayout
+        android:id="@+id/linearLayoutFrameId"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/explanatoryTextId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="This activity shows a simple TextView wich can't be edited by the user and  a editText where the user can type.\n\nTo return, tap the return button or tap your phone &quot;back&quot; button."
+            android:textColor="@color/Black" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="30dp" />
+
+        <EditText
+            android:id="@+id/userInputTextId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Insert text here." />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/returnButtonId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="148dp"
+        android:layout_marginLeft="148dp"
+        android:layout_marginRight="148dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="62dp"
+        android:text="Return"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFrameId" />
 </android.support.constraint.ConstraintLayout>
