--- a/app/src/main/res/layout/activity_text_view_showcase.xml
+++ b/app/src/main/res/layout/activity_text_view_showcase.xml
@@ -39,7 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Insert text here." />
+            android:hint="@string/insert_text_here"
+            android:inputType="none" />
 
     </LinearLayout>
 
@@ -47,13 +48,14 @@
         android:id="@+id/returnButtonId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="148dp"
         android:layout_marginLeft="148dp"
         android:layout_marginRight="148dp"
         android:layout_marginStart="148dp"
-        android:layout_marginTop="62dp"
-        android:text="Return"
+        android:text="@string/return_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFrameId" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
